--- a/index.html
+++ b/index.html
@@ -74,17 +74,21 @@
                 <h3 class="text-2xl font-semibold text-gray-700 mb-4">Book a New Appointment</h3>
                 <form id="appointmentForm" class="grid grid-cols-1 gap-4">
                     <div>
-                        <label for="patientName" class="block text-sm font-medium text-gray-700">Patient Name</label>
+                        <label for="patientName" class="block text-sm font-medium text-gray-700">
+                            Patient Name <span class="text-red-500">*</span>
+                        </label>
                         <input type="text" id="patientName" name="patientName" required
                                class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-2 border">
                     </div>
                     <div>
                         <label for="contactNumber" class="block text-sm font-medium text-gray-700">Contact Number</label>
-                        <input type="tel" id="contactNumber" name="contactNumber" required
+                        <input type="tel" id="contactNumber" name="contactNumber"
                                class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-2 border">
                     </div>
                     <div>
-                        <label for="appointmentDatetime" class="block text-sm font-medium text-gray-700">Appointment Date & Time</label>
+                        <label for="appointmentDatetime" class="block text-sm font-medium text-gray-700">
+                            Appointment Date & Time <span class="text-red-500">*</span>
+                        </label>
                         <input type="datetime-local" id="appointmentDatetime" name="appointmentDatetime" required
                                class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-2 border">
                     </div>
@@ -300,8 +304,15 @@
         const contactNumber = appointmentForm.contactNumber.value.trim();
         const appointmentDatetime = appointmentForm.appointmentDatetime.value;
 
-        if (!patientName || !contactNumber || !appointmentDatetime) {
-            showModal("Please fill in all the fields.", "alert");
+        // Basic validation for required fields
+        if (!patientName || !appointmentDatetime) {
+            showModal("Please fill in all required fields (marked with *).", "alert");
+            return;
+        }
+
+        // Validate contact number if entered
+        if (contactNumber.length > 0 && contactNumber.length !== 11) {
+            showModal("The contact number must be exactly 11 digits long.", "alert");
             return;
         }
 
